updated for image alignment issues

--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -795,7 +795,7 @@ opacity:1
 	width: 11.25rem;
 	height: 6.875rem;
 	background: #e0e0e0;
-	border: 1px solid #c6c6c6
+	/* border: 1px solid #c6c6c6 */
 }
 
 .app-hoverPanel img {
